--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Room Expense Tracker</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Room Expense Tracker</h1>
+    <h2>Room Expense Tracker</h2>
+    <p id="total-collected">Total Collected: ₹0</p>
+    <p id="remaining-balance">Remaining Balance: ₹0</p>
 
-    <form id="expense-form">
-        <input type="text" id="person" placeholder="Enter Name" required>
-        <input type="number" id="amount" placeholder="Enter Amount" required>
-        <button type="submit">Add Expense</button>
-    </form>
+    <input type="text" id="expense-name" placeholder="Enter Expense Name">
+    <input type="number" id="expense-amount" placeholder="Enter Amount">
+    <button id="add-expense">Add Expense</button>
 
-    <h2>Expenses</h2>
-    <ul id="expense-list"></ul>
+    <h3>Expenses</h3>
+    <ul id="expenses-list"></ul>
 
-    <h3>Total Balance: <span id="balance">0</span></h3>
-
-    <!-- Firebase -->
     <script type="module" src="script.js"></script>
 </body>
 </html>
